--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,30 @@
   transform: skew(45deg);
 }
 
+.btn-special-animation {
+  position: relative;
+  transition: background-color 0.3s;
+  overflow: hidden;
+  z-index: 0;
+}
+.btn-special-animation::before {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.3s;
+  z-index: -1;
+}
+.btn-special-animation:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
 *,
 *::before,
 *::after {
@@ -105,6 +129,7 @@ body {
 .header__btn {
   margin-top: 2em;
   padding: 0.8em 1.6em;
+  font-size: 1.4rem;
   background-color: #fff;
   border: none;
   border-radius: 8px;
@@ -112,4 +137,7 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   cursor: pointer;
+}
+.header__btn::before {
+  background-color: #eee;
 }/*# sourceMappingURL=main.css.map */
