--- a/sass/main.scss
+++ b/sass/main.scss
@@ -100,6 +100,7 @@ body {
 	&__btn {
 		margin-top: 2em;
 		padding: 0.8em 1.6em;
+		font-size: 1.4rem;
 		background-color: $pure-white;
 		border: none;
 		border-radius: 8px;
@@ -107,5 +108,10 @@ body {
 		text-decoration: none;
 		text-transform: uppercase;
 		cursor: pointer;
+		
+		
+		&::before {
+			background-color: $light-white;
+		}
 	}
 }
